# localrag

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile
localrag/: __init__.py  config.py  core.py
localrag/api/: main.py  models.py
localrag/api/routes/: documents.py  health.py  query.py
localrag/ingestion/: chunker.py  parsers.py  pipeline.py
localrag/llm/: base.py  factory.py  ollama_client.py  openai_client.py  prompts.py
localrag/retrieval/: embeddings.py  engine.py
tests/unit/: test_config.py  test_parsers.py
